--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/camera"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/pick_from_camera"/>
 
+    <item
+        android:id="@+id/album"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/pick_from_album"/>
+    
 </menu>
